force-app/main/default/objects/Project_Calculation_Template__c/Project_Calculation_Template__c.object-meta.xml
<CustomObject>
    <label>Project Calculation Template</label>
    <nameField>
        <displayFormat>TEMP-{0000}</displayFormat>
        <label>Project Calculation Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Calculation Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>