force-app/main/default/objects/Project_Calculation_Template__c/fields/Calculation_Detail_Field__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Detail_Field__c</fullName>
    <label>Calculation Detail Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>