force-app/main/default/objects/Project_Calculation_Template__c/fields/Source_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Lookup_Field__c</fullName>
    <label>Source Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>