force-app/main/default/objects/Project_Calculation_Template__c/fields/Target_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API__c</fullName>
    <label>Target Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>