force-app/main/default/objects/Project_Calculation_Template__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>