force-app/main/default/objects/Project_Calculation_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Active__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Source_Lookup_Field__c</columns>
    <columns>Target_Field_API__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>